# QtLoginLauncher

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RUN_QT_DEMO.md
CefProject/: README.md
assets/default_config/config/: clientinfo.xml  config.xml  version.xml
assets/duilib_skin_reference/FaceVertifyIe/: UIDialog.xml
assets/duilib_skin_reference/PlayerInfo_Collect/: UIDialog.xml
assets/duilib_skin_reference/accountlst/: UIAccountElem.xml  UIDialog.xml
assets/duilib_skin_reference/cellphone_register/: UIAccount.xml  UIDialog.xml
assets/duilib_skin_reference/code_key/: UIDialog.xml
assets/duilib_skin_reference/combobox/: ComboDrop.xml
assets/duilib_skin_reference/container/: UIDialog.xml
assets/duilib_skin_reference/cursor/: UIDialog.xml
assets/duilib_skin_reference/face_collect_msg_confirm_close/: UIDialog.xml
assets/duilib_skin_reference/face_verif_confirm_close/: UIDialog.xml
assets/duilib_skin_reference/ime/: UIDialog.xml
assets/duilib_skin_reference/keyboard/: UIDialog.xml
assets/duilib_skin_reference/login/: UIAccount.xml  UIDialog.xml
assets/duilib_skin_reference/msgbox/: UIDialog.xml  UIDialog_OKCancelChecked.xml  UIDialog_OkCancel.xml
assets/duilib_skin_reference/protect_a8/: UIDialog.xml
assets/duilib_skin_reference/protect_card/: UIDialog.xml
assets/duilib_skin_reference/protect_card1/: UIDialog.xml
assets/duilib_skin_reference/protect_code/: UIDialog.xml
assets/duilib_skin_reference/protect_key/: UIDialog.xml
assets/duilib_skin_reference/protocol/: UIDialog.xml
assets/duilib_skin_reference/push_message/: UIDialog.xml
assets/duilib_skin_reference/tooltip/: UIDialog.xml
cmake/: QtDeploy.cmake
docs/: CEF_OSR_PROTOCOL.md  account_history_combo_20260518.md  cef109_protocol_runtime_20260518.md  cef109_web_bridge_20260517.md  cef_osr_scrollbar_drag_20260518.md  code_key_dpi_clip_fix_20260518.md  code_key_login_rewrite_20260518.md  code_key_refresh_click_interval_20260518.md  daoyu_external_links_20260518.md  dpi_auto_scale_20260516.md  dpi_checkbox_hint_scale_20260516.md  dpi_font_demo_scale_20260516.md  dpi_full_ui_scale_20260516.md  dpi_scaler_20260516.md  dx_demo_login_callback_messagebox_20260518.md  dx_embedded_alpha_cutoff_20260518.md  getsystemconfig_startup_20260516.md  legacy_login_call_flows.md  legacy_login_code_map.md  login_runtime_flows_20260518.md  password_crypto_bridge_export_20260516.md  password_login_rewrite.md  password_login_runtime_flow_20260516.md  protocol_browser_first_click_20260517.md  protocol_browser_resources_20260517.md  protocol_initial_acceptance_20260517.md  push_message_cancel_callback_fix_20260518.md  push_message_login_rewrite_20260518.md  qt_demo_sdk_call_mapping.md  repository_publish_20260519.md  sdoa4client_dx_demo_20260518.md  sdobaseclient_integration.md  sdologin_process_relaunch_state_20260519.md  sdologinclient_merge_plan.md  vs_project_filters_all_20260518.md  vs_sdologin_filters_20260518.md  vs_solution_project_map.md
include/: SDOA4Client.h  SDOADx11.h  SDOADx8.h  SDOADx9.h
include/legacy/: interface.h
samples/dx_login_demo/: CMakeLists.txt  dx_demo_behavior.cpp  dx_demo_behavior.h  main.cpp
samples/qt_login_demo/: CMakeLists.txt  main.cpp
samples/sdk_caller/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  logger.cpp  logger.h  process_util.cpp  process_util.h  string_util.cpp  string_util.h
src/config/: CMakeLists.txt  client_config_model.cpp  client_config_model.h  config_manager.cpp  config_manager.h
src/game_update/: CMakeLists.txt  game_update.cpp  game_update.def
src/ipc/: CMakeLists.txt  named_pipe.cpp  named_pipe.h
src/protocol/: CMakeLists.txt  json_payload.cpp  json_payload.h  protocol_frame.cpp  protocol_frame.h  protocol_types.h
src/qtlogin_browser/: CMakeLists.txt  cef_debug_probe.cpp  main.cpp  qtlogin_browser.exe.manifest
src/sdk/: CMakeLists.txt  directx_compat_adapter.cpp  directx_compat_adapter.h  legacy_login_adapter.cpp  legacy_login_adapter.h  login_process_manager.cpp  login_process_manager.h  sdk.def  sdk_exports.cpp  sdk_runtime.cpp  sdk_runtime.h  sdoa_app_adapter.cpp  sdoa_app_adapter.h
src/sdologin/: CMakeLists.txt  account_history_combo.cpp  account_history_combo.h  account_history_model.cpp  account_history_model.h  cef_offscreen_browser.cpp  cef_offscreen_browser.h  cef_web_bridge.cpp  cef_web_bridge.h  code_key_login_model.cpp  code_key_login_model.h  code_key_login_panel.cpp  code_key_login_panel.h  command_line.cpp  command_line.h  dpi_scaler.cpp  dpi_scaler.h  legacy_password_auth.cpp  legacy_password_auth.h  legacy_password_crypto.cpp  legacy_password_crypto.h  login_window.cpp  login_window.h  main.cpp  protocol_acceptance_model.cpp  protocol_acceptance_model.h  protocol_browser_dialog.cpp  protocol_browser_dialog.h  protocol_browser_launcher.cpp  protocol_browser_launcher.h  protocol_browser_style.cpp  protocol_browser_style.h  push_message_login_model.cpp  push_message_login_model.h  push_message_login_panel.cpp  push_message_login_panel.h  qt_dpi_config.cpp  qt_dpi_config.h  quick_login_skin.cpp  quick_login_skin.h  (+13 more)
src/ui_model/: CMakeLists.txt  legacy_dialog_registry.cpp  legacy_dialog_registry.h  ui_model.h
src/update_entry/: CMakeLists.txt  update_entry.cpp  update_entry.def
src/update_helper/: CMakeLists.txt  main.cpp
tests/account_history_combo_tests/: CMakeLists.txt  main.cpp
tests/config_tests/: CMakeLists.txt  main.cpp
tests/protocol_tests/: CMakeLists.txt  main.cpp
tests/sdk_module_tests/: CMakeLists.txt  main.cpp
tests/sdologin_tests/: CMakeLists.txt  main.cpp
tests/ui_model_tests/: CMakeLists.txt  main.cpp
